Fix tag separator spacing

--- a/index.css
+++ b/index.css
@@ -381,11 +381,6 @@ form {
   margin-bottom: 12px;
 }
 
-.mx-12 {
-  margin-left: 12px;
-  margin-right: 12px;
-}
-
 .p-16 {
   padding: 16px;
 }
